<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.authentication.login.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_default"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_apps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oxygen_bold"
                android:text="@string/app_name"
                android:textSize="@dimen/text_almost_big" />

            <TextView
                android:id="@+id/tv_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_sub" />

            <TextView
                android:id="@+id/tv_title_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:fontFamily="@font/oxygen_bold"
                android:text="@string/login"
                android:textSize="@dimen/text_biggest" />

            <com.harifrizki.storyapp.components.EmailEditText
                android:id="@+id/ed_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:hint="@string/message_hint_email"
                android:minHeight="@dimen/height_default"
                android:textColorHint="@color/text_color_hint" />

            <com.harifrizki.storyapp.components.PasswordEditText
                android:id="@+id/ed_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_half_default"
                android:hint="@string/message_hint_password"
                android:minHeight="@dimen/height_default"
                android:textColorHint="@color/text_color_hint" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:text="@string/login" />

            <TextView
                android:id="@+id/tv_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_half_default"
                android:text="@string/message_registration"
                android:textAlignment="center" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>