<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.authentication.registration.RegistrationActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/components_app_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_default">

            <TextView
                android:id="@+id/tv_title_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oxygen_bold"
                android:text="@string/registration"
                android:textSize="@dimen/text_biggest" />

            <com.harifrizki.storyapp.components.TextEditText
                android:id="@+id/ed_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:hint="@string/message_hint_name"
                android:minHeight="@dimen/height_default"
                android:textColorHint="@color/text_color_hint" />

            <com.harifrizki.storyapp.components.EmailEditText
                android:id="@+id/ed_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_half_default"
                android:hint="@string/message_hint_email"
                android:minHeight="@dimen/height_default"
                android:textColorHint="@color/text_color_hint" />

            <com.harifrizki.storyapp.components.PasswordEditText
                android:id="@+id/ed_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_half_default"
                android:hint="@string/message_hint_password"
                android:minHeight="@dimen/height_default"
                android:textColorHint="@color/text_color_hint" />

            <Button
                android:id="@+id/btn_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:text="@string/registration" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_half_default"
                android:text="@string/message_login"
                android:textAlignment="center" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>