<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/padding_default">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_multiple_multiple_add_default"
        android:paddingVertical="@dimen/padding_default"
        android:background="@drawable/frame_background_white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_multiple_add_default"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:fontFamily="@font/oxygen_bold"
            android:textSize="@dimen/text_big"
            android:gravity="center"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/tv_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_half_default"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:gravity="center"
            android:text="@string/app_sub" />

        <Button
            android:id="@+id/btn_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:text="@string/ok"
            app:cornerRadius="@dimen/round_default" />
    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lt_notification"
        android:layout_width="@dimen/image_size_default"
        android:layout_height="@dimen/image_size_default"
        android:layout_gravity="top|center"
        app:lottie_autoPlay="true"
        app:lottie_fileName="success.json"
        app:lottie_loop="true"
        app:lottie_speed="1" />
</FrameLayout>