<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_default"
    tools:context=".module.errorpage.ConnectionErrorActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lt_error"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_size_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306"
        app:lottie_autoPlay="true"
        app:lottie_fileName="connection_error.json"
        app:lottie_loop="true"
        app:lottie_speed="1" />

    <TextView
        android:id="@+id/tv_title_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_half_default"
        android:fontFamily="@font/oxygen_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/text_big"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lt_error"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_half_half_default"
        android:text="@string/app_sub"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_title_message"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tv_title_message"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_message"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_message"
        app:layout_constraintStart_toStartOf="@+id/tv_message"
        app:layout_constraintTop_toBottomOf="@+id/tv_message"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>