<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_half_default"
    android:background="@drawable/frame_background_secondary"
    android:gravity="start|top"
    android:orientation="horizontal"
    android:padding="@dimen/padding_half_default">

    <com.github.florent37.shapeofview.shapes.RoundRectView
        android:id="@+id/rrv_item_photo"
        android:layout_width="@dimen/image_size_half_default"
        android:layout_height="@dimen/image_size_half_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shape_roundRect_bottomLeftRadius="@dimen/round_default"
        app:shape_roundRect_bottomRightRadius="@dimen/round_default"
        app:shape_roundRect_topLeftRadius="@dimen/round_default"
        app:shape_roundRect_topRightRadius="@dimen/round_default">

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:transitionName="item_photo"
            app:srcCompat="@drawable/default_wait_image" />
    </com.github.florent37.shapeofview.shapes.RoundRectView>

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_half_default"
        android:transitionName="item_name"
        android:fontFamily="@font/oxygen_bold"
        android:text="@string/app_name"
        android:textSize="@dimen/text_almost_big"
        app:layout_constraintBottom_toBottomOf="@+id/rrv_item_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/rrv_item_photo"
        app:layout_constraintTop_toTopOf="@+id/rrv_item_photo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_item_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_half_half_default"
        android:transitionName="item_description"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/app_sub"
        app:layout_constraintBottom_toBottomOf="@+id/rrv_item_photo"
        app:layout_constraintEnd_toEndOf="@+id/tv_item_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_item_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_item_description"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tv_item_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_description"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>