<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.story.addstory.AddStoryActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/components_app_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_default"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_add_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_size_default"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/default_add_image" />

            <TextView
                android:id="@+id/tv_message_add_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_half_half_default"
                android:fontFamily="@font/oxygen_light"
                android:text="@string/message_add_image"
                android:textAlignment="center"
                android:textSize="@dimen/text_small" />

            <EditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_half_default"
                android:background="@drawable/frame_background_secondary"
                android:layout_margin="@dimen/margin_default"
                android:minLines="10"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_half_half_default"
        android:text="@string/submit"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="@+id/btn_cancel"
        app:layout_constraintStart_toStartOf="@+id/btn_cancel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_default"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>